--- a/BBM/BBM/Register.html
+++ b/BBM/BBM/Register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký / Đăng nhập</title>
+    <title>Đăng ký</title>
     <style>
         body {
             display: flex;
@@ -34,12 +34,6 @@
         .image-section {
             width: 70%;
             background: url('trangdau.png') no-repeat center center/cover;
-        }
-        .form-wrapper {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
         .form-group {
             width: 100%;
@@ -77,21 +71,41 @@
 <body>
     <div class="container">
         <div class="form-section">
-            <div class="form-wrapper">
-                <h2>Đăng Nhập</h2>
-                <form action="Register.html">
-                    <div class="form-group">
-                        <label>Tên đăng nhập</label>
-                        <input type="text" placeholder="Nhập tên đăng nhập">
-                    </div>
-                    <div class="form-group">
-                        <label>Mật khẩu</label>
-                        <input type="password" placeholder="Nhập mật khẩu">
-                    </div>
-                    <button class="button">Đăng Nhập</button>
-                </form>
-                <p class="switch-text">Chưa có tài khoản? <a href="Register.html">Đăng ký</a></p>
-            </div>
+            <h2>Đăng Ký</h2>
+            <form>
+                <div class="form-group">
+                    <label>Họ và tên</label>
+                    <input type="text" placeholder="Nhập họ và tên">
+                </div>
+                <div class="form-group">
+                    <label>Ngày tháng năm sinh</label>
+                    <input type="date">
+                </div>
+                <div class="form-group">
+                    <label>Giới tính</label>
+                    <select>
+                        <option value="male">Nam</option>
+                        <option value="female">Nữ</option>
+                        <option value="other">Khác</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" placeholder="Nhập email">
+                </div>
+                <div class="form-group">
+                    <label>Mật khẩu</label>
+                    <input type="password" placeholder="Nhập mật khẩu">
+                </div>
+                <div class="form-group">
+                    <label>Nhập lại mật khẩu</label>
+                    <input type="password" placeholder="Nhập lại mật khẩu">
+                </div>
+                <button type="submit" class="button">Đăng Ký</button>
+            </form>
+            <p class="switch-text">Đã có tài khoản? <a href="Login.html">Đăng nhập</a></p>
+            <p class="switch-text"><a href="court_manager.html">Trở thành Court Manager</a></p>
+            <p class="switch-text"><a href="court_staff.html">Trở thành Court Staff</a></p>
         </div>
         <div class="image-section"></div>
     </div>
