--- a/BBM/BBM/add-court.html
+++ b/BBM/BBM/add-court.html
@@ -19,7 +19,10 @@
             <label for="court-time">Khung Giờ Hoạt Động:</label>
             <input type="time" id="court-time" class="form-control" required>
 
-            <label for="court-price">Cài Đặt Giá:</label>
+            <label for="court-close-time">Giờ Đóng Cửa:</label>
+            <input type="time" id="court-close-time" class="form-control" required>
+
+            <label for="court-price">Cài Đặt Giá Theo Tiếng:</label>
             <input type="text" id="court-price" class="form-control" required>
 
             <label for="court-image">Hình Ảnh Sân:</label>
@@ -32,7 +35,6 @@
     </div>
 
     <script>
-        // Hiển thị ảnh xem trước
         document.getElementById("court-image").addEventListener("change", function(event) {
             const file = event.target.files[0];
             if (file) {
@@ -44,26 +46,34 @@
                 reader.readAsDataURL(file);
             }
         });
-
+    
         function addCourt() {
             let name = document.getElementById("court-name").value;
             let address = document.getElementById("court-address").value;
             let time = document.getElementById("court-time").value;
+            let closeTime = document.getElementById("court-close-time").value;
             let price = document.getElementById("court-price").value;
-            let image = document.getElementById("preview-image").src;
+            let imageInput = document.getElementById("court-image");
 
-            if (!name || !address || !time || !price || !image) {
+            if (!name || !address || !time || !closeTime || !price || !imageInput.files.length) {
                 alert("Vui lòng nhập đầy đủ thông tin!");
                 return;
             }
 
-            let courts = JSON.parse(localStorage.getItem("courts")) || [];
-            courts.push({ name, address, time, price, image });
-            localStorage.setItem("courts", JSON.stringify(courts));
+            let reader = new FileReader();
+            reader.onload = function(event) {
+                let imageUrl = event.target.result;
+                let courts = JSON.parse(localStorage.getItem("courts")) || [];
+                let newCourt = { name, address, time, closeTime, price, image: imageUrl };
+                courts.push(newCourt);
+                localStorage.setItem("courts", JSON.stringify(courts));
+                window.location.href = "manage-court.html";
+            };
 
-            alert("Thêm sân thành công!");
-            <button type="button" class="btn btn-secondary mt-3" onclick="window.location.href='CourtManager.html'">Quay về trang chủ</button>// Chuyển hướng sau khi thêm
+            reader.readAsDataURL(imageInput.files[0]);
         }
+
     </script>
+    
 </body>
 </html>
