--- a/BBM/BBM/CourtManager.html
+++ b/BBM/BBM/CourtManager.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <script>
+        function loadPage(page) {
+            fetch(page)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("page-content").innerHTML = data;
+                })
+                .catch(error => console.log("Lỗi tải trang:", error));
+        }
+
+        document.addEventListener("DOMContentLoaded", function() {
+            loadPage('manage-staff.html'); // Mặc định hiển thị trang danh sách nhân viên
+        });
+    </script>
     <style>
         body { font-family: 'Arial', sans-serif; background-color: #f8f9fa; }
         #sidebar-wrapper { width: 250px; height: 100vh; background-color: #2c3e50; }
@@ -20,8 +33,6 @@
         .card { box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); border-radius: 10px; }
         .stats { font-size: 1.5rem; font-weight: bold; }
         footer { background: #2c3e50; color: white; padding: 10px; text-align: center; }
-        .content-section {display: none; /* Mặc định ẩn */}
-        .content-section.active {display: block; /* Hiển thị khi được chọn */}
     </style>
 </head>
 <body>
@@ -33,45 +44,45 @@
                 <div class="list-group-item bg-dark">
                     <i class="fas fa-basketball-ball me-2"></i> Sân Cầu Lông
                     <div class="submenu">
-                        <a href="add-court.html" class="text-white d-block">Thêm Sân</a>
-                        <a href="manage-court.html" class="text-white d-block">Quản Lý Sân</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('add-court.html')">Thêm Sân</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('manage-court.html')">Quản Lý Sân</a>
                     </div>
                 </div>
                 <div class="list-group-item bg-dark">
                     <i class="fas fa-calendar-alt me-2"></i> Đặt Sân
                     <div class="submenu">
-                        <a href="#time-slot" class="text-white d-block">Đặt Khung Giờ</a>
-                        <a href="#pricing" class="text-white d-block">Cài Đặt Giá</a>
-                        <a href="#policy" class="text-white d-block">Chính Sách</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('time-slot.html')">Đặt Khung Giờ</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('pricing.html')">Cài Đặt Giá</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('policy.html')">Chính Sách</a>
                     </div>
                 </div>
                 <div class="list-group-item bg-dark">
                     <i class="fas fa-users me-2"></i> Nhân Viên
                     <div class="submenu">
-                        <a href="#approve-staff" class="text-white d-block">Xét Duyệt</a>
-                        <a href="#staff-list" class="text-white d-block">Danh Sách</a>
-                        <a href="#payroll" class="text-white d-block">Chấm Công</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('approve-staff.html')">Xét Duyệt</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('manage-staff.html')">Danh Sách</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('pay-roll.html')">Chấm Công</a>
                     </div>
                 </div>
                 <div class="list-group-item bg-dark">
                     <i class="fas fa-trophy me-2"></i> Lịch Thi Đấu
                     <div class="submenu">
-                        <a href="#confirm-booking" class="text-white d-block">Xác Nhận Đặt Sân</a>
-                        <a href="#tournament" class="text-white d-block">Tạo Giải Đấu</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('confirm-booking.html')">Xác Nhận Đặt Sân</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('tournament.html')">Tạo Giải Đấu</a>
                     </div>
                 </div>
                 <div class="list-group-item bg-dark">
                     <i class="fas fa-chart-line me-2"></i> Doanh Thu
                     <div class="submenu">
-                        <a href="#report" class="text-white d-block">Thống Kê</a>
-                        <a href="#payment" class="text-white d-block">Thanh Toán</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('report.html')">Thống Kê</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('payment.html')">Thanh Toán</a>
                     </div>
                 </div>
                 <div class="list-group-item bg-dark">
                     <i class="fas fa-gift me-2"></i> Khuyến Mãi
                     <div class="submenu">
-                        <a href="#add-promo" class="text-white d-block">Thêm Khuyến Mãi</a>
-                        <a href="#vip" class="text-white d-block">Khách Hàng VIP</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('add-promo.html')">Thêm Khuyến Mãi</a>
+                        <a href="#" class="text-white d-block" onclick="loadPage('vip.html')">Khách Hàng VIP</a>
                     </div>
                 </div>
             </div>
@@ -82,25 +93,9 @@
                 <button class="btn btn-primary" id="menu-toggle">☰</button>
                 <span class="ms-auto">Xin chào, Admin</span>
             </nav>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card p-4 mb-4 text-center">
-                        <h5>Doanh Thu</h5>
-                        <p class="stats text-success">10,000,000 VNĐ</p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card p-4 mb-4 text-center">
-                        <h5>Số Lượng Đặt Sân</h5>
-                        <p class="stats text-primary">120</p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card p-4 mb-4 text-center">
-                        <h5>Tình Trạng Sân</h5>
-                        <p class="stats text-danger">5 Sân Trống / 20 Sân</p>
-                    </div>
-                </div>
+
+            <div id="page-content">
+                <!-- Nội dung trang sẽ hiển thị tại đây -->
             </div>
         </div>
     </div>
