Tui update register

--- a/BBM/BBM/Register.html
+++ b/BBM/BBM/Register.html
@@ -109,12 +109,12 @@
                 <!-- Bước 2: Thông tin cá nhân -->
                 <div id="step2" class="hidden">
                     <div class="form-group">
-                        <label>Họ và Tên</label>
-                        <input type="text" placeholder="Nhập họ và tên" required>
+                        <label>Họ</label>
+                        <input type="text" placeholder="Nhập họ của bạn" required>
                     </div>
                     <div class="form-group">
-                        <label>Tuổi</label>
-                        <input type="number" placeholder="Nhập tuổi" required>
+                        <label>Tên</label>
+                        <input type="text" placeholder="Nhập tên của bạn" required>
                     </div>
                     <div class="form-group">
                         <label>Giới tính</label>
@@ -124,33 +124,11 @@
                             <option value="Khác">Khác</option>
                         </select>
                     </div>
+                    <div class="form-group">
+                        <label>Số điện thoại</label>
+                        <input type="number" placeholder="Nhập số điện thoại của bạn" required>
+                    </div>
                     <button type="button" class="button" onclick="prevStep(2)">Quay lại</button>
-                    <button type="button" class="button" onclick="nextStep(2)">Tiếp theo</button>
-                </div>
-
-                <!-- Bước 3: Địa chỉ -->
-                <div id="step3" class="hidden">
-                    <div class="form-group">
-                        <label>Số nhà</label>
-                        <input type="text" placeholder="Nhập số nhà" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Xã</label>
-                        <input type="text" placeholder="Nhập xã" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Huyện</label>
-                        <input type="text" placeholder="Nhập huyện" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Tỉnh</label>
-                        <input type="text" placeholder="Nhập tỉnh" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Quốc gia</label>
-                        <input type="text" placeholder="Nhập quốc gia" required>
-                    </div>
-                    <button type="button" class="button" onclick="prevStep(3)">Quay lại</button>
                     <button type="submit" class="button">Đăng Ký</button>
                 </div>
             </form>
