--- a/BBM/BBM/report.html
+++ b/BBM/BBM/report.html
@@ -1,14 +1,23 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thống Kê Doanh Thu</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+<body>
 <div class="container mt-4">
     <h2 class="mb-4">Thống Kê Doanh Thu</h2>
 
     <div class="row">
         <div class="col-md-6">
             <h4>Doanh Thu Tháng Này</h4>
-            <p class="stats text-success">💰 50,000,000 VNĐ</p>
+            <p class="stats text-success">💰 {{ "{:,.0f}".format(total_revenue) }} VNĐ</p>
         </div>
         <div class="col-md-6">
             <h4>Đơn Đặt Sân Tháng Này</h4>
-            <p class="stats text-primary">📅 320 lượt đặt</p>
+            <p class="stats text-primary">📅 {{ total_bookings }} lượt đặt</p>
         </div>
     </div>
 
@@ -21,16 +30,15 @@
             </tr>
         </thead>
         <tbody>
+            {% for stat in daily_stats %}
             <tr>
-                <td>10/02/2025</td>
-                <td>5,000,000</td>
-                <td>35</td>
+                <td>{{ stat.date.strftime('%d/%m/%Y') }}</td>
+                <td>{{ "{:,.0f}".format(stat.revenue) }}</td>
+                <td>{{ stat.bookings }}</td>
             </tr>
-            <tr>
-                <td>09/02/2025</td>
-                <td>4,500,000</td>
-                <td>30</td>
-            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </div>
+</body>
+</html>
