--- a/BBM/BBM/vip.html
+++ b/BBM/BBM/vip.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Khách Hàng VIP</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+<body>
 <div class="container mt-4">
     <h2 class="mb-4">Khách Hàng VIP</h2>
 
@@ -6,23 +15,21 @@
             <tr>
                 <th>#</th>
                 <th>Họ Tên</th>
-                <th>Số Lượt Đặt</th>
+                <th>Số Giờ Đặt</th>
                 <th>Ưu Đãi</th>
             </tr>
         </thead>
         <tbody>
+            {% for customer in vip_customers %}
             <tr>
-                <td>1</td>
-                <td>Lê Minh Tuấn</td>
-                <td>50</td>
-                <td class="text-success">Giảm 10%</td>
+                <td>{{ loop.index }}</td>
+                <td>{{ customer.full_name }}</td>
+                <td>{{ customer.booked_hours }}</td>
+                <td class="text-success">{{ customer.discount }}</td>
             </tr>
-            <tr>
-                <td>2</td>
-                <td>Phạm Văn Long</td>
-                <td>45</td>
-                <td class="text-success">Giảm 8%</td>
-            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </div>
+</body>
+</html>
